# rust-practice

./: Cargo.toml
src/: actix.rs  basic.rs  fetching.rs  functions.rs  main.rs
